feat: Fix content and add image for lab introduction

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Logo_DAI_NAM.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Đại Nam - Khoa CNTT</title>
+        <title>Đại Nam - AIoT Lab</title>
         
     </head>
     <body>
