--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             rel="stylesheet"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>AIoT Lab - FIT DNU</title>
+        <title>Job App</title>
     </head>
     <body>
         <div id="root"></div>
